remove node module in ext

--- a/src/popup.html
+++ b/src/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Scraper Extension</title>
-    <script src="popup.js" defer></script>
+    <script type="module" src="popup.js" defer></script>
   </head>
   <body>
     <h1>Scraper Extension</h1>
