--- a/extension/src/popup.html
+++ b/extension/src/popup.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>Scraper Extension</title>
+    <title>ourcourseville</title>
     <script type="module" src="popup.js" defer></script>
   </head>
   <body>
-    <h1>Scraper Extension</h1>
-    <button id="scrapeButton">Scrape Data</button>
+    <h1>ourcourseville</h1>
+    <button id="scrapeButton">Share solution</button>
     <pre id="output"></pre>
   </body>
 </html>
