--- a/extension/src/popup.html
+++ b/extension/src/popup.html
@@ -7,6 +7,13 @@
   <body>
     <h1>ourcourseville</h1>
     <button id="scrapeButton">Share solution</button>
-    <pre id="output"></pre>
+    <div style="margin-top: 20px">
+      <input
+        id="solutionInput"
+        type="text"
+        placeholder="Paste record ID here"
+      />
+      <button id="loadButton">Load solution</button>
+    </div>
   </body>
 </html>
